# gmenu2x-zipit

./: configure.in  gmenu2x.sh  input.conf.dingoo
data/: Makefile.am
data/platform/dingux/: gmenu2x.conf
data/platform/dingux/sections/settings/: poweroff  reboot  suspend
data/platform/nanonote/: gmenu2x.sh
data/platform/nanonote/sections/applications/: links
data/platform/nanonote/sections/utilities/: stop-listener
data/platform/pandora/: input.conf
data/platform/zipitz2/: gmenu2x.conf  gmenu2x.sh  input.conf
data/platform/zipitz2/sections/applications/: irc  lynx  netsurf  retawq
data/platform/zipitz2/sections/games/: fheroes2  scummvm
data/platform/zipitz2/sections/terminals/: bash  minicom  nano
data/platform/zipitz2/sections/utilities/: eject  suspend
nanonote/: gmenu2x.conf  gmenu2x.sh
nanonote/sections/applications/: qstardict
nanonote/sections/games/: allegro-setup  freedroid
nanonote/sections/programming/: gforth  lua  octave  python
nanonote/sections/terminals/: ash-color  byobu
nanonote/sections/utilities/: mc  mediatomb
pandora/: gmenu2x.conf  input.conf
pandora/skins/Default/wallpapers/: README
src/: FastDelegate.h  Makefile-zear  Makefile.am  asfont.cpp  asfont.h  browsedialog.cpp  browsedialog.h  button.h  buttonbox.cpp  buttonbox.h  cpu.cpp  cpu.h  debug.h  dialog.cpp  dirdialog.cpp  dirdialog.h  filedialog.cpp  filedialog.h  filelister.cpp  filelister.h  gmenu2x.cpp  gmenu2x.h  iconbutton.cpp  iconbutton.h  imagedialog.cpp  imagedialog.h  imageio.cpp  imageio.h  inputdialog.cpp  inputdialog.h  inputmanager.cpp  inputmanager.h  jz4740.h  link.cpp  link.h  linkaction.cpp  linkaction.h  linkapp.cpp  linkapp.h  menu.cpp  (+47 more)
src/sparsehash-1.6/: simple_test  sparsetable_unittest  time_hash_map  type_traits_unittest
src/sparsehash-1.6/src/: config.h
